--- a/cloudformation/vpc.yaml
+++ b/cloudformation/vpc.yaml
@@ -1,4 +1,4 @@
-Description:  Udacity - Design for Availability, Resilience, and Reliability
+Description:  Udacity - Design for Availability, Resilience, and Reliability.
 
 Parameters:
   VpcName:
